--- a/Trabalho Final/Reg_W/RegW/RegW.qsf
+++ b/Trabalho Final/Reg_W/RegW/RegW.qsf
@@ -58,7 +58,8 @@ set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_RegW -sectio
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_RegW -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_RegW
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_RegW -section_id tb_RegW
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegW.vhd -section_id tb_RegW
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "1000 ns" -section_id tb_RegW
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegW.vhd -section_id tb_RegW
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
